<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project name="com.trollworks.gcs" default="bundle" xmlns:if="ant:if" xmlns:unless="ant:unless">
	<property name="module.name" value="com.trollworks.gcs"/>
	<property name="module.version" value="4.13.0"/>
    <property name="app.name" value="GURPS Character Sheet"/>
    <property name="app.name.short" value="GCS"/>
    <property name="exe.name" value="gcs"/>
	<property name="copyright.owner" value="Richard A. Wilkes"/>
	<property name="maintainer.email" value="wilkes@me.com"/>
	<property name="target.version" value="13"/>
	<property name="build.dir" value="antbuild"/>
    <property name="dist.dir" value="dist"/>
	<property name="modules.dir" value="../java_modules"/>
	<tstamp>
		<format property="module.version.long" pattern="${module.version}.yyyyMMddHHmmss"/>
	</tstamp>
	<tstamp>
		<format property="module.version.year" pattern="1998-yyyy"/>
	</tstamp>
	<condition property="platform.mac" else="false">
		<os family="mac"/>
	</condition>
	<condition property="platform.windows" else="false">
		<os family="windows"/>
	</condition>
	<condition property="platform.linux" else="false">
		<and>
			<os family="unix"/>
			<not>
				<os family="mac"/>
			</not>
		</and>
	</condition>
	<property if:true="${platform.mac}" name="platform" value="macos"/>
	<property if:true="${platform.windows}" name="platform" value="windows"/>
	<property if:true="${platform.linux}" name="platform" value="linux"/>
	<property if:true="${platform.mac}" name="disk.image.name" value="${app.name} ${module.version}"/>
	<property if:true="${platform.mac}" name="dist.root" value="${build.dir}/${disk.image.name}"/>
	<property if:true="${platform.linux}" name="dist.root" value="${build.dir}/${exe.name}-${module.version}"/>
	<property if:true="${platform.windows}" name="dist.root" value="${build.dir}/${exe.name}-${module.version}"/>
    <property if:true="${platform.mac}" name="app.root" value="${dist.root}/${app.name}"/>
    <property if:true="${platform.linux}" name="app.root" value="${dist.root}"/>
    <property if:true="${platform.windows}" name="app.root" value="${dist.root}"/>
	<property if:true="${platform.mac}" name="jpackage" value="${user.home}/jdk-14.jdk/Contents/Home/bin/jpackage"/>
	<property unless:true="${platform.mac}" name="jpackage" value="${user.home}/jdk-14/bin/jpackage"/>

	<target name="build">
        <delete>
            <fileset dir="." includes="**/.DS_Store" defaultexcludes="false"/>
        </delete>

		<symlink if:true="${platform.mac}" action="delete" link="${dist.root}/Applications"/>
	    <delete dir="${build.dir}"/>
		<mkdir dir="${build.dir}"/>
		<mkdir dir="${modules.dir}"/>
		<delete>
			<fileset dir="${modules.dir}" includes="${module.name}*"/>
		</delete>

        <javac destdir="${build.dir}" includeantruntime="false" source="${target.version}" target="${target.version}" modulepath="${modules.dir}" encoding="UTF8">
            <src path="src"/>
        </javac>

        <manifest file="manifest">
        	<attribute name="bundle-name" value="${app.name.short}"/>
        	<attribute name="bundle-version" value="${module.version.long}"/>
        	<attribute name="bundle-license" value="Mozilla Public License 2.0"/>
           	<attribute name="bundle-copyright-owner" value="${copyright.owner}"/>
           	<attribute name="bundle-copyright-years" value="${module.version.year}"/>
        	<attribute name="bundle-executable" value="${exe.name}"/>
           	<attribute name="bundle-id" value="${module.name}"/>
           	<attribute name="bundle-signature" value="RWGS"/>
           	<attribute name="bundle-category" value="public.app-category.role-playing-games"/>
        </manifest>

		<exec executable="jar">
			<arg value="--create"/>
			<arg value="--file"/>
			<arg file="${modules.dir}/${module.name}-${module.version}.jar"/>
			<arg value="--module-version"/>
			<arg value="${module.version}"/>
			<arg value="--manifest"/>
			<arg value="manifest"/>
			<arg value="--main-class"/>
			<arg value="${module.name}.app.GCS"/>
			<arg value="-C"/>
			<arg value="${build.dir}"/>
			<arg value="."/>
			<arg value="-C"/>
			<arg value="resources"/>
			<arg value="."/>
		</exec>

		<symlink if:true="${platform.mac}" action="delete" link="${dist.root}/Applications"/>
	    <delete dir="${build.dir}"/>
		<delete file="manifest"/>

		<zip destfile="${modules.dir}/${module.name}-${module.version}-src.zip" level="9" basedir="." excludes="bin/**,*.dmg,*.tgz,*.zip"/>
    </target>

	<target name="deps">
		<ant dir="../org.apache.commons.logging" target="build" inheritall="false"/>
		<ant dir="../org.apache.fontbox" target="build" inheritall="false"/>
		<ant dir="../org.apache.pdfbox" target="build" inheritall="false"/>
		<ant dir="../gnu.trove" target="build" inheritall="false"/>
		<ant dir="../com.lowagie.text" target="build" inheritall="false"/>
		<ant dir="../toolkit" target="build" inheritall="false"/>
	</target>
	
	<target name="bundle" depends="deps,build">
		<delete dir="${build.dir}"/>
		<delete if:true="${platform.linux}" dir="fix_linux"/>
		<delete file="${app.name}-${module.version}.dmg"/>
		<delete file="${app.name}-${module.version}.msi"/>
		<delete file="${exe.name}_${module.version}-1_amd64.deb"/>
        <mkdir dir="${build.dir}/extra/i18n"/>
        <exec executable="java">
            <arg value="--module-path"/>
            <arg path="${modules.dir}"/>
            <arg value="--module"/>
            <arg value="com.trollworks.toolkit/com.trollworks.toolkit.utility.I18nMain"/>
            <arg value="src"/>
            <arg value="../toolkit/src"/>
        </exec>
		<move file="template.i18n" tofile="${build.dir}/extra/i18n/template.i18n"/>
        <copy todir="${build.dir}/extra/Library">
            <fileset dir="../gcs_library/Library"/>
        </copy>
		<exec executable="jlink" failonerror="true">
            <arg value="--module-path"/>
            <arg path="${modules.dir}"/>
            <arg value="--output"/>
            <arg path="${build.dir}/jre"/>
            <arg value="--compress=2"/>
            <arg value="--no-header-files"/>
            <arg value="--no-man-pages"/>
			<arg value="--strip-debug"/>
			<arg value="--strip-native-commands"/>
            <arg value="--add-modules"/>
            <arg value="${module.name}"/>
        </exec>
		<exec executable="${jpackage}" failonerror="true">
            <arg value="--name"/>
            <arg unless:true="${platform.linux}" value="${app.name}"/>
            <arg if:true="${platform.linux}" value="${app.name.short}"/>
			<arg value="--module"/>
			<arg value="${module.name}/${module.name}.app.GCS"/>
			<arg value="--app-version"/>
			<arg value="${module.version}"/>
			<arg value="--copyright"/>
			<arg value="©${module.version.year} by ${copyright.owner}"/>
			<arg value="--vendor"/>
			<arg value="${copyright.owner}"/>
			<arg value="--description"/>
			<arg value="${app.name} (${app.name.short}) is a stand-alone, interactive, character sheet editor that allows you to build characters for the GURPS 4th Edition roleplaying game system."/>
            <arg value="--license-file"/>
            <arg path="LICENSE"/>
			<arg value="--icon"/>
            <arg if:true="${platform.mac}" path="artifacts/icns/app.icns"/>
            <arg if:true="${platform.linux}" path="artifacts/png/app.png"/>
            <arg if:true="${platform.windows}" path="artifacts/ico/app.ico"/>
            <arg value="--file-associations"/>
            <arg path="artifacts/file_associations/${platform}/adq_ext.properties"/>
            <arg value="--file-associations"/>
            <arg path="artifacts/file_associations/${platform}/eqp_ext.properties"/>
            <arg value="--file-associations"/>
            <arg path="artifacts/file_associations/${platform}/gcs_ext.properties"/>
            <arg value="--file-associations"/>
            <arg path="artifacts/file_associations/${platform}/gct_ext.properties"/>
            <arg value="--file-associations"/>
            <arg path="artifacts/file_associations/${platform}/not_ext.properties"/>
            <arg value="--file-associations"/>
            <arg path="artifacts/file_associations/${platform}/skl_ext.properties"/>
            <arg value="--file-associations"/>
            <arg path="artifacts/file_associations/${platform}/spl_ext.properties"/>
            <arg value="--input"/>
            <arg path="${build.dir}/extra"/>
            <arg value="--runtime-image"/>
            <arg path="${build.dir}/jre"/>
			<arg if:true="${platform.mac}" value="--mac-package-name"/>
			<arg if:true="${platform.mac}" value="${app.name.short}"/>
			<arg if:true="${platform.linux}" value="--linux-package-name"/>
            <arg if:true="${platform.linux}" value="${exe.name}"/>
            <arg if:true="${platform.linux}" value="--linux-package-deps"/>
            <arg if:true="${platform.linux}" value=""/>
            <arg if:true="${platform.linux}" value="--linux-deb-maintainer"/>
            <arg if:true="${platform.linux}" value="${maintainer.email}"/>
            <arg if:true="${platform.linux}" value="--linux-menu-group"/>
            <arg if:true="${platform.linux}" value="RolePlaying"/>
            <arg if:true="${platform.linux}" value="--linux-app-category"/>
            <arg if:true="${platform.linux}" value="RolePlaying"/>
			<arg if:true="${platform.linux}" value="--linux-rpm-license-type"/>
			<arg if:true="${platform.linux}" value="MPLv2.0"/>
            <arg if:true="${platform.linux}" value="--linux-shortcut"/>
            <arg if:true="${platform.windows}" value="--win-menu"/>
            <arg if:true="${platform.windows}" value="--win-menu-group"/>
            <arg if:true="${platform.windows}" value="RolePlaying"/>
            <arg if:true="${platform.windows}" value="--win-shortcut"/>
            <arg if:true="${platform.windows}" value="--type"/>
            <arg if:true="${platform.windows}" value="msi"/>
            <arg if:true="${platform.windows}" value="--win-dir-chooser"/>
			<arg if:true="${platform.windows}" value="--win-upgrade-uuid"/>
			<arg if:true="${platform.windows}" value="E71F99DA-AD84-4E6E-9bE7-4E65421752E1"/>
        </exec>
        <delete dir="${build.dir}"/>
		<!-- Fix up linux packaging to make the library writable -->
		<exec if:true="${platform.linux}" executable="dpkg-deb">
			<arg value="--raw-extract"/>
			<arg value="${exe.name}_${module.version}-1_amd64.deb"/>
			<arg value="fix_linux"/>
		</exec>
		<exec if:true="${platform.linux}" executable="chmod">
			<arg value="-R"/>
			<arg value="go+w"/>
			<arg value="fix_linux/opt/${exe.name}/lib/app/Library"/>
		</exec>
		<delete file="${exe.name}_${module.version}-1_amd64.deb"/>
		<exec if:true="${platform.linux}" executable="dpkg-deb">
			<arg value="--build"/>
			<arg value="fix_linux"/>
			<arg value="${exe.name}_${module.version}-1_amd64.deb"/>
		</exec>
		<delete if:true="${platform.linux}" dir="fix_linux"/>
	</target>

	<target name="clone-deps">
		<exec executable="git" dir="..">
			<arg value="clone"/>
			<arg value="https://github.com/richardwilkes/org.apache.commons.logging"/>
		</exec>
		<exec executable="git" dir="..">
			<arg value="clone"/>
			<arg value="https://github.com/richardwilkes/org.apache.fontbox"/>
		</exec>
		<exec executable="git" dir="..">
			<arg value="clone"/>
			<arg value="https://github.com/richardwilkes/org.apache.pdfbox"/>
		</exec>
		<exec executable="git" dir="..">
			<arg value="clone"/>
			<arg value="https://github.com/richardwilkes/gnu.trove"/>
		</exec>
		<exec executable="git" dir="..">
			<arg value="clone"/>
			<arg value="https://github.com/richardwilkes/com.lowagie.text"/>
		</exec>
		<exec executable="git" dir="..">
			<arg value="clone"/>
			<arg value="https://github.com/richardwilkes/toolkit"/>
		</exec>
		<exec executable="git" dir="..">
			<arg value="clone"/>
			<arg value="https://github.com/richardwilkes/gcs_library"/>
		</exec>
	</target>

	<target name="pull">
		<exec executable="git" dir="../org.apache.commons.logging">
			<arg value="pull"/>
		</exec>
		<exec executable="git" dir="../org.apache.fontbox">
			<arg value="pull"/>
		</exec>
		<exec executable="git" dir="../org.apache.pdfbox">
			<arg value="pull"/>
		</exec>
		<exec executable="git" dir="../gnu.trove">
			<arg value="pull"/>
		</exec>
		<exec executable="git" dir="../com.lowagie.text">
			<arg value="pull"/>
		</exec>
		<exec executable="git" dir="../toolkit">
			<arg value="pull"/>
		</exec>
		<exec executable="git" dir="../gcs_library">
			<arg value="pull"/>
		</exec>
		<exec executable="git">
			<arg value="pull"/>
		</exec>
	</target>
</project>
